--- a/package.json
+++ b/package.json
@@ -36,33 +36,33 @@
   "dependencies": {
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.10.8",
     "lodash": "^4.17.21",
-    "lru-cache": "^7.3.1",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-query": "^3.34.15",
+    "lru-cache": "^7.4.0",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.16",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.3.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.178",
-    "@types/lru-cache": "^5.1.1",
-    "@types/node": "17.0.18",
-    "@types/react": "17.0.39",
+    "@types/lodash": "^4.14.179",
+    "@types/lru-cache": "^7.4.0",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
     "@types/react-transition-group": "^4.4.4",
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.0.17",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.7",
     "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.7",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.5.5"
+    "typescript": "^4.6.2"
   }
 }
