--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "@types/react": "^17.0.39",
     "@types/react-transition-group": "^4.4.4",
     "autoprefixer": "^10.4.2",
-    "cssnano": "^5.0.17",
     "eslint": "^8.10.0",
     "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "postcss": "^8.4.7",
