--- a/package.json
+++ b/package.json
@@ -34,31 +34,31 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "dayjs": "^1.11.3",
-    "lodash": "^4.17.21",
-    "next": "^12.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.1",
-    "react-transition-group": "^4.4.2",
-    "react-use": "^17.4.0"
+    "axios": "1.7.2",
+    "classnames": "2.5.1",
+    "dayjs": "1.11.12",
+    "lodash": "4.17.21",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-query": "3.39.3",
+    "react-transition-group": "4.4.5",
+    "react-use": "17.5.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.1",
-    "@types/react": "^18.0.14",
-    "@types/react-transition-group": "^4.4.5",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.19.0",
-    "eslint-config-next": "^12.2.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.7.4"
+    "@types/lodash": "4.17.7",
+    "@types/node": "20.14.11",
+    "@types/react": "18.3.3",
+    "@types/react-transition-group": "4.4.10",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "husky": "9.1.1",
+    "lint-staged": "15.2.7",
+    "postcss": "8.4.39",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.5",
+    "tailwindcss": "3.4.6",
+    "typescript": "5.5.3"
   }
 }
