--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     ]
   },
   "dependencies": {
-    "axios": "1.7.2",
+    "@tanstack/react-query": "5.51.9",
     "classnames": "2.5.1",
     "dayjs": "1.11.12",
+    "ky": "1.4.0",
     "lodash": "4.17.21",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-query": "3.39.3",
     "react-transition-group": "4.4.5",
     "react-use": "17.5.0"
   },
@@ -50,7 +50,6 @@
     "@types/node": "20.14.11",
     "@types/react": "18.3.3",
     "@types/react-transition-group": "4.4.10",
-    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "husky": "9.1.1",
