--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "prepare": "husky install",
+    "prepare": "husky init",
     "start": "next start"
   },
   "lint-staged": {
@@ -40,6 +40,7 @@
     "ky": "1.4.0",
     "lodash": "4.17.21",
     "next": "14.2.5",
+    "pokedex-promise-v2": "4.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-transition-group": "4.4.5",
