--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-transition-group": "4.4.5",
-    "usehooks-ts": "3.1.0"
+    "usehooks-ts": "3.1.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@types/lodash": "4.17.7",
